# chat

./: .env  .env.production  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: debug-cert.yml  desktop-build.yml  release.yml
scripts/: sync-version.mjs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src/api/: case.js  chat.js  group.js  material.js  user.js
src/components/base/: MyUpload.vue  Xtime.vue
src/components/case/: Detail.vue
src/components/common/: TokenReceiver.vue  UrlTokenParser.vue
src/components/editor/: Editor.vue  MeEditorMaterial.vue  MeEditorRecord.vue  MeEditorRhetoric.vue
src/components/group/: GroupPanel.vue
src/components/talk/: HistoryRecord.vue  SearchRecord.vue  TalkItem.vue
src/constant/: message.ts  theme.ts
src/event/: talk.js
src/hooks/: useAccessPrompt.ts  useSessionMenu.ts  useTalkRecord.ts
src/hooks/common/: form.ts
src/layout/: MainLayout.vue  SubViewLayout.vue
src/layout/component/: AccountCard.vue  Menu.vue  Sponsor.vue
src/router/: index.js
src/router/modules/: group.js  sort.js
src/store/: index.ts
src/store/modules/: case-detail.ts  dialogue.js  search.js  talk.ts  uploads.ts  user.ts
src/types/: chat.ts
src/utils/: auth.js  common.ts  datetime.js  datetime.ts  functions.ts  request.js  storage.ts  talk.js
src/views/auth/: forget.vue  layout.vue  login.vue  register.vue
src/views/group/: layout.vue  member.vue
src/views/message/: index.vue
src/views/setting/: layout.vue
src/views/sort/: group.vue  layout.vue
(+27 files in other folders)
