[package]
name = "app"
version = "1.0.6"
description = "悦诉客服"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "app_lib"
path = "src/lib.rs"
crate-type = ["lib"]
